# blerp

./: Cargo.toml  LICENSE  Makefile  README.md
man/: blerp.1
src/: blerp.rs  main.rs
tests/: test_blerp.rs
