[package]
name = "blerp"
version = "0.1.0"
authors = ["Kevin Yap <me@kevinyap.ca>"]
description = "Filters local or remote files or resources. Based on xkcd #1692."
homepage = "https://github.com/iKevinY/blerp"
repository = "https://github.com/iKevinY/blerp"
readme = "README.md"
license = "MIT"

[[bin]]
name = "blerp"
path = "src/main.rs"
test = false

[lib]
path = "src/blerp.rs"

[dependencies]
ansi_term = "0.7"
docopt = "0.6"
regex = "0.1"
rustc-serialize = "0.3"
